# ms-denovo-db-utils

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SPECIFICATION.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bash_scripts/: split_fasta.sh
docker_bin/: build_reset_input.py  collate_into_fasta.py  generate_reverse_decoys.py  process_casanovo_results.py  process_comet_results.py
python_scripts/: build_reset_input.py  collate_into_fasta.py  generate_reverse_decoys.py  process_casanovo_results.py  process_comet_results.py
src/ms_denovo_db_utils/: __init__.py  casanovo.py  collate.py  comet.py  diamond.py  fasta.py  massutil.py  reset_input.py
src/ms_denovo_db_utils/cli/: __init__.py  build_reset_input.py  collate_into_fasta.py  generate_reverse_decoys.py  process_casanovo_results.py  process_comet_results.py
tests/: canonical.py
tests/docker/: conftest.py  test_image_contract.py  test_pipeline_output.py
tests/fixtures/: README.md
tests/fixtures/casanovo/: run1.mztab  run2.mztab
tests/fixtures/comet/: crash.txt  decoy_meets_target.txt  run1.txt  run2.txt
tests/fixtures/diamond/: ambiguous.dmnd.txt  crash.dmnd.txt  decoy_meets_target.dmnd.txt  hits.dmnd.txt
tests/fixtures/fasta/: crash_plusdecoys.fasta  library_targets.fasta  with_stop_codon.fasta
tests/fixtures/golden/: casanovo_peptides.txt  combined_results.fasta  comet_peptides.txt  library_plusdecoys.fasta  reset_input.stderr  reset_input.txt
tests/unit/: test_casanovo.py  test_comet.py  test_determinism.py  test_diamond.py  test_fasta.py  test_golden.py  test_massutil.py  test_packaging.py  test_performance.py  test_reset_input.py
